--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@300;400;700;800&family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
 
+    <!-- Swiper -->
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
     <!-- script -->
     <script src="/js/script.js" defer></script>
 
@@ -82,18 +88,145 @@
     </div>
     <div class="s-three">
         <div class="container">
-
+            <div class="tag">
+                <div class="smallBall">
+                </div>
+                <span>More secure</span>
+            </div>
+            <h2>Secure with 3pace</h2>
+            <p>At 3pace, your online security is our top priority. Our seasoned team and advanced protocols work diligently to protect your data. Relax, we've got your online security covered, allowing you to enjoy the internet worry-free.</p>
+            <button>Contact Us</button>
         </div>
     </div>
     <div class="s-four">
         <div class="container">
-            
+            <div class="top">
+                <div class="left">
+                    <div class="tag">
+                    <div class="smallBall">
+                    </div>
+                    <span>Products</span>
+                    </div>
+                    <h2>Explore Our Service</h2>
+                    <p>At 3pace, your online security is our top priority. Our seasoned team and advanced protocols work diligently to protect your data. Relax, we've got your online security covered, allowing you to enjoy the internet worry-free.</p>
+                </div>
+                <div class="right">
+                    <a href=""><span>Click here to more info</span>
+                    <img src="assets/i icon.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <img src="assets/Slide 01.png" alt="">
+                                <div class="text">
+                                <h3>Data Recovery</h3>
+                                <span>Solutions to ensure data integrity and recovery.</span>
+                                </div>
+                                <a href=""><span>Secure Now</span></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bot">
+                <div class="ctrl" data-aos-delay="300" data-aos="fade-up">
+                    <div class="swiper-pagination">
+                    </div>
+                    <div class="swipe">
+                        <span>Swipe to explore</span>
+                    <img src="assets/Arrow 1.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
         <div class="container">
-            
+          <a href=""><img src="assets/Logo.png" alt=""></a>
+          <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Terms Of Services</a></li>
+          </ul>
+          <p>© 2023 3pace Security | All Rights Reserved</p>
         </div>
     </footer>
+    <!-- Scripts -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 </html>
