--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- script -->
     <script src="/js/script.js" defer></script>
 
@@ -30,12 +33,12 @@
     <header>
         <div class="absolute">
             <div class="container">
-                <div class="logo">
+                <div class="logo" data-aos="fade-right">
                     <img src="/assets/Logo.png" alt="">
                 </div>
-                <div class="right">
+                <div class="right" data-aos="fade-left">
                     <span>Services</span>
-                    <img src="/assets/Line 1.png" alt="">
+                    <img class="line" src="/assets/Line 1.png" alt="">
                     <button class="btn-icon">
                         <div class="img" id="callUs" >
                         <img src="/assets/Call Us.svg" alt="">
@@ -49,7 +52,7 @@
     
     <div class="s-hero">
         <div class="container">
-            <div class="left">
+            <div class="left" data-aos="fade-right" data-aos-delay="400">
                 <h1>Unlocking Cybersecurity Excellence!</h1>
                 <p>Journeying Through the <strong>3 Paces</strong> of Protection with 3pace.</p>
                 <button>Elevate Your Security</button>
@@ -65,7 +68,7 @@
             <img src="/assets/Tablet.png" alt="">
         </div>
         <div class="container">
-            <div class="left">
+            <div class="left" data-aos="fade-right" data-aos-delay="400">
                 <div class="tag">
                     <div class="smallBall">
 
@@ -89,35 +92,35 @@
     </div>
     <div class="s-three">
         <div class="container">
-            <div class="tag">
+            <div class="tag" data-aos="fade-right">
                 <div class="smallBall">
                 </div>
                 <span>More secure</span>
             </div>
-            <h2>Secure with 3pace</h2>
-            <p>At 3pace, your online security is our top priority. Our seasoned team and advanced protocols work diligently to protect your data. Relax, we've got your online security covered, allowing you to enjoy the internet worry-free.</p>
-            <button>Contact Us</button>
+            <h2 data-aos="fade-right" data-aos-delay="400">Secure with 3pace</h2>
+            <p data-aos="fade-right" data-aos-delay="600">At 3pace, your online security is our top priority. Our seasoned team and advanced protocols work diligently to protect your data. Relax, we've got your online security covered, allowing you to enjoy the internet worry-free.</p>
+            <button data-aos="fade-right" data-aos-delay="900">Contact Us</button>
         </div>
     </div>
     <div class="s-four">
         <div class="container">
             <div class="top">
                 <div class="left">
-                    <div class="tag">
+                    <div class="tag" data-aos="fade-right">
                     <div class="smallBall">
                     </div>
                     <span>Products</span>
                     </div>
-                    <h2>Explore Our Service</h2>
-                    <p>At 3pace, your online security is our top priority. Our seasoned team and advanced protocols work diligently to protect your data. Relax, we've got your online security covered, allowing you to enjoy the internet worry-free.</p>
+                    <h2 data-aos="fade-right" data-aos-delay="400">Explore Our Service</h2>
+                    <p data-aos="fade-right" data-aos-delay="600">At 3pace, your online security is our top priority. Our seasoned team and advanced protocols work diligently to protect your data. Relax, we've got your online security covered, allowing you to enjoy the internet worry-free.</p>
                 </div>
-                <div class="right">
+                <div class="right" data-aos="fade-left" data-aos-delay="400">
                     <a href=""><span>Click here to more info</span>
                     <img src="assets/i icon.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="slide">
+            <div class="slide" data-aos="fade-up" data-aos-delay="400">
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -205,9 +208,9 @@
             </div>
             <div class="bot">
                 <div class="ctrl" data-aos-delay="300" data-aos="fade-up">
-                    <div class="swiper-pagination">
+                    <div class="swiper-pagination" data-aos="fade-right" data-aos-delay="400">
                     </div>
-                    <div class="swipe">
+                    <div class="swipe" data-aos="fade-left" data-aos-delay="400">
                         <span>Swipe to explore</span>
                     <img src="assets/Arrow 1.png" alt="">
                     </div>
@@ -216,7 +219,7 @@
         </div>
     </div>
     <footer>
-        <div class="container">
+        <div class="container" data-aos="fade-right">
           <a href=""><img src="assets/Logo.png" alt=""></a>
           <ul>
             <li><a href="">About Us</a></li>
