--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
     </div>
     <footer>
-        <div class="container" data-aos="fade-right">
+        <div class="container" >
           <a href=""><img src="assets/Logo.png" alt=""></a>
           <ul>
             <li><a href="">About Us</a></li>
